--- a/.github/workflows/update-yt.yml
+++ b/.github/workflows/update-yt.yml
@@ -25,11 +25,11 @@ jobs:
           wget -U okhttp/1.2 -qP tmp http://103.152.118.53:80/api/yt/index.py
           python3 tmp/index.py --url "https://www.youtube.com/c/aquariusmusikindo/live" akuarius.m3u8
           sleep 3
-          python3 tmp/index.py --url "https://www.youtube.com/watch?v=0Kln8aj0v3E" beenchenel.m3u8
+          python3 tmp/index.py --url "https://www.youtube.com/channel/UCcZg5r9hBqK_VPUT2I7eYVw/live" Bernama.m3u8
           sleep 3
           python3 tmp/index.py --url "https://www.youtube.com/c/musicastudios/live" musika.m3u8
           sleep 3
-          python3 tmp/index.py --url "https://www.youtube.com/watch?v=NYoNORroe3o" nagaswaradensdut.m3u8
+          python3 tmp/index.py --url "https://www.youtube.com/nagaswarafmbgr/live" nagaswaradensdut.m3u8
           sleep 3
           python3 tmp/index.py --url "https://www.youtube.com/watch?v=Gvfr_OoTp1E" nagaswarakoplo.m3u8
           sleep 3
@@ -37,11 +37,11 @@ jobs:
           sleep 3
           python3 tmp/index.py --url "https://www.youtube.com/watch?v=Qk-QnFxIZ88" nagaswarareligi.m3u8
           sleep 3
-          python3 tmp/index.py --url "https://www.youtube.com/c/kompastv/live" kompasteve_yt.m3u8
+          python3 tmp/index.py --url "https://www.youtube.com/c/kompastv/live" ae5f9d6bcd610b7.m3u8
           sleep 3
-          python3 tmp/index.py --url "https://www.youtube.com/live/d59850Gob28" netdot_yt.m3u8
+          python3 tmp/index.py --url "https://www.youtube.com/@metrotvnews/live" 6183ec225226ccc.m3u8
           sleep 3
-          python3 tmp/index.py --url "https://www.youtube.com/c/tvonenews/live" tiviwan_yt.m3u8
+          python3 tmp/index.py --url "https://www.youtube.com/c/tvonenews/live" 0976f879a0c4548.m3u8
           rm -rf tmp
       - name: commit
         run: |
