--- a/.github/workflows/update-yt.yml
+++ b/.github/workflows/update-yt.yml
@@ -35,7 +35,7 @@ jobs:
           sleep 3
           python3 tmp/index.py --url "https://www.youtube.com/watch?v=Is03gZsBeq0" nagaswarapop.m3u8
           sleep 3
-          python3 tmp/index.py --url "https://www.youtube.com/watch?v=Qk-QnFxIZ88" nagaswarareligi.m3u8
+          python3 tmp/index.py --url "https://www.youtube.com/SaudiQuranTv/live" f74b5dff8b8e6c6.m3u8
           sleep 3
           python3 tmp/index.py --url "https://www.youtube.com/c/kompastv/live" ae5f9d6bcd610b7.m3u8
           sleep 3
